labs/lab1/testsuite/bad/comma-expression.cc
// 2023-11-15

int main () {
  int x, y, z;
  z = x, y;    // We do not accept comma expressions!
}
